Adds search for the tuning substrate plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wstrict-prototypes -Wall -W
 set(CMAKE_C_FLAGS_RELEASE "-Os")
 
 include(../scorep_plugin_common/FindScorep.cmake)
-if(SCOREP_FOUND)
+if( SCOREP_FOUND )
     include_directories(${SCOREP_INCLUDE_DIRS})
     link_directories(${SCOREP_LIBRARY_DIRS})
     SET(CMAKE_INSTALL_PREFIX ${SCOREP_ROOT_PATH} CACHE PATH "Install path prefix, prepended onto install directories." FORCE)
@@ -24,10 +24,19 @@ else()
     message(SEND_ERROR "Scorep was not found but is required!")
 endif()
 
+include(../scorep_plugin_common/FindTuningSubstrate.cmake)
+if( TUNING_SUBSTRATE_FOUND )
+    include_directories(${TUNING_SUBSTRATE_INCLUDE_DIRS})
+    link_directories(${TUNING_SUBSTRATE_LIBRARY_DIRS})
+    SET(CMAKE_INSTALL_PREFIX ${TUNING_SUBSTRATE_ROOT_PATH} CACHE PATCH "Install path prefix, prepended onto install directories." FORCE)
+else()
+    message(SEND_ERROR "Tuning substrate plugin was not found but is required!")
+endif()
+
 # find libenopt
 find_path(ENOPT_INC_DIR NAMES enoptC.h defines.h HINTS ${ENOPT_INC} ${ENOPT_DIR}/include DOC "Path to enoptC.h")
 if( ENOPT_INC_DIR )
-	if(ENOPT_STATIC)
+	if( ENOPT_STATIC )
 		message("Using static libenopt")
 		message("Linking might fail if you use the static version of libenopt and your library is not compiled with -fPIC. In this case use the cmake flag -DENOPT_STATIC=OFF")
 		set(LIBENOPT_NAME libenopt.a)
@@ -53,21 +62,21 @@ add_library(EnoptTP SHARED EnoptTP.c Shared.c)
 target_link_libraries(EnoptMP pthread ${LIBENOPT_NAME})
 target_link_libraries(EnoptTP pthread ${LIBENOPT_NAME})
 
-install(TARGETS EnoptMP EnoptTP LIBRARY DESTINATION ${SCOREP_ROOT_PATH}/lib/plugins)
+install(TARGETS EnoptMP EnoptTP LIBRARY DESTINATION ${TUNING_SUBSTRATE_ROOT_PATH}/lib/plugins)
 
-message ("SCOREP_FOUND          =${SCOREP_FOUND}")
-message ("SCOREP_ROOT_PATH      =${SCOREP_ROOT_PATH}")
-message ("SCOREP_INCLUDE_DIRS   =${SCOREP_INCLUDE_DIRS}")
-message ("SCOREP_LIBRARY_DIRS   =${SCOREP_LIBRARY_DIRS}")
-message ("ENOPT_STATIC          =${ENOPT_STATIC}")
-message ("ENOPT_DIR             =${ENOPT_DIR}")
-message ("ENOPT_INC             =${ENOPT_INC}")
-message ("ENOPT_INC_DIR         =${ENOPT_INC_DIR}")
-message ("ENOPT_LIB             =${ENOPT_LIB}")
-message ("ENOPT_LIB_DIR         =${ENOPT_LIB_DIR}")
-message ("LIBENOPT_NAME         =${LIBENOPT_NAME}")
-message ("CMAKE_C_FLAGS         =${CMAKE_C_FLAGS}")
-message ("CMAKE_C_FLAGS_DEBUG   =${CMAKE_C_FLAGS_DEBUG}")
-message ("CMAKE_C_FLAGS_RELEASE =${CMAKE_C_FLAGS_RELEASE}")
-message ("CMAKE_INSTALL_PREFIX  =${CMAKE_INSTALL_PREFIX}")
-message ("CMAKE_SOURCE_DIR      =${CMAKE_SOURCE_DIR}")
+message ("SCOREP_FOUND                  =${SCOREP_FOUND}")
+message ("SCOREP_ROOT_PATH              =${SCOREP_ROOT_PATH}")
+message ("SCOREP_INCLUDE_DIRS           =${SCOREP_INCLUDE_DIRS}")
+message ("SCOREP_LIBRARY_DIRS           =${SCOREP_LIBRARY_DIRS}")
+message ("TUNING_SUBSTRATE_FOUND        =${TUNING_SUBSTRATE_FOUND}")
+message ("TUNING_SUBSTRATE_ROOT_PATH    =${TUNING_SUBSTRATE_ROOT_PATH}")
+message ("TUNING_SUBSTRATE_INCLUDE_DIRS =${TUNING_SUBSTRATE_INCLUDE_DIRS}")
+message ("TUNING_SUBSTRATE_LIBRARY_DIRS =${TUNING_SUBSTRATE_LIBRARY_DIRS}")
+message ("ENOPT_STATIC                  =${ENOPT_STATIC}")
+message ("ENOPT_DIR                     =${ENOPT_DIR}")
+message ("ENOPT_INC                     =${ENOPT_INC}")
+message ("ENOPT_INC_DIR                 =${ENOPT_INC_DIR}")
+message ("ENOPT_LIB                     =${ENOPT_LIB}")
+message ("ENOPT_LIB_DIR                 =${ENOPT_LIB_DIR}")
+message ("LIBENOPT_NAME                 =${LIBENOPT_NAME}")
+message ("CMAKE_SOURCE_DIR              =${CMAKE_SOURCE_DIR}")
